css/style.css
* {
	margin: 0px;
	padding: 0px;
	-webkit-padding-start: 0px;
	}

html {
  padding: 0;
  margin: 0;
  font-family: 'Oswald', sans-serif;
  color: #000;
  }
		   
body {
	min-width: 200px;
  padding-top: 0;
	line-height: 1.4em;
	font-size: 1em;
  }

.offset {
  padding-left: 3em;
  width: 80%;
  margin: 0 auto;
  padding-right: 3em;
}

header {
  background: #FFF url('halftone.png') repeat;
  padding: 2em 0;
  } 
     
#links ul {
  margin-right: 10em;
}

#links a {
  color: #000;
  font-weight: normal;
  }

#links a:hover {
  color: #333;
  font-weight: normal;
  }

#links li {
  display: inline;
  float: right;
  margin-right: 4em;
  }
  
h1 {
  font-size: 250%;
  font-weight: bold;
  line-height: 1em;
  }
       
h2 {
  line-height: 1.2em;
  font-size: 1.2em;
  margin-top: 1em;
  font-weight: bold;
  }
  
p#tagline{
  margin: auto 7%;
  padding-bottom: 2em;
  font-style: italic;
  font-weight: normal;
  font-family: Georgia, serif;
  line-height: 2em;
  font-size: 1.2em;
  }
  


header img {
  height: 200px;
  width: 200px;
  border-radius: 100px;
  display: none;
  }
/*
===============
Body Styling
===============
*/  

.hidden{
  display:none;
  }

ul {
  list-style-type:none;
  }

#filter-div {
  float: left;
  width: 100%;
  height: 100%;
  padding: 1em 0;
  margin: 0;
  background-color: #CBD6DD;
  }

ul#filter button {
  font-family: 'Ubuntu', sans-serif;
  font-weight: bold;
  text-transform: uppercase;
  background-color: transparent;
  padding: .7em .2em;
  font-size: .8em;
  width: 13%;
  border: none;
  float: left;
  }


ul #filter button:hover {
  background-color: #3384b3;
  }

#portfolio {
  background-color: white;
  }

#container {
  padding-top: 3em;
  width: 100%;
  }

.item {
  width:70%;
  min-height:220px;
  margin:4em auto;
  vertical-align: middle;
  position:relative;
  }

.item:nth-child(2n) {
  background-color: #DDD;
  }

.portfolio-thumb {
  /*filter:alpha(opacity=90); */   /* ie  */
  /*opacity: 0.7;*/
  margin-top: 5px;
  }

.item .caption {
  width:50%;
  min-height:200px;
  margin-left:200px;
  padding-left: 2em;
  color:#000;
  font-weight:bold;
  position:absolute;
  left:0;
  /*filter:alpha(opacity=90);*/    /* ie  */
  /*opacity: 0.9; */ 
  }

.item .caption a {
  text-decoration:none;
  color: #e03406;
  font-size:16px;
  /* add spacing and make the whole row clickable*/
  padding:1em;
  display:block;
  font-family: 'Ubuntu', sans-serif;
  font-weight: bold;
  text-transform: uppercase;
  }

.caption a:hover {
  color: #CBD6DD;
}
.item .caption p {
  padding:5px;
  margin:0;
  font-size:.7em;
  font-weight: normal;
  font-family: Arial, sans-serif;
  }

.technologies li {
  display: inline-block;
  width: 50px;
  height: 50px;
}

.technologies img {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

/*BUG BUG BUG -- don't need to use js for img positioning anymore*/
img {
  /* allow javascript moves the img position*/
  position:absolute;
  }

.clear {
  clear:both;
  }

/*END*/

h3,h4,h5 {
  line-height: 1.6em;
  font-size: 1em;
  }

a, button {
  color: #3384b3;
  text-decoration: none;
  font-weight: bold;
  }

a:hover, a:active, button:hover, button:active {
  color: #e03406;
  }
  
.email {
  font-size: .9em;
  }

img {
  padding: 0;
  margin: auto;
  text-align: center;
  display: block;
  }

.thumb {
  display: inline;
  margin: 10px;
  }

object {
  text-align: center;
  display: block;
  margin: 30px auto;
  }

.clear {
  clear: both;
  }


/* Filter classes:
copyedit
design
graphics
html
css
js
wordpress
logo
ruby
*/


/*
=============
Footer
=============
*/
footer {
	margin: 2em auto;
  padding: 2em 0;
  background-color: #CBD6DD;
	}

ul#social {
	list-style-type:none;
	}
	
ul#social li{
  width: 32px;
  height: auto;
	display: inline-block;
	}
	
#copyright {
	font-size: .8em;
	text-align: center;
  padding-top: 3em;
  color: #FFF;
	}

